# DiscoPong

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  main.cpp  readme.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad2/: CMakeLists.txt
lib/hello/: CMakeLists.txt  hello.cpp
resources/shaders/: basic.frag  basic.vert
src/: DiscoPongConfig.h.in  main.cpp
src/buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h
src/math/: Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  math.h
src/opengl/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/renderer/: BatchRenderer2d.cpp  BatchRenderer2d.h  Renderable2d.cpp  Renderable2d.h  Renderer2d.h  Simple2dRenderer.cpp  Simple2dRenderer.h  Sprite.cpp  Sprite.h
src/shader/: Shader.cpp  Shader.h
src/window/: Window.cpp  Window.h
